<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="tipe.elecquizz.Home">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/background"
        android:scaleType="center"
        android:src="@drawable/background" />

    <ImageView
        android:id="@+id/back"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_margin="16sp"
        android:contentDescription="@string/back"
        android:src="@drawable/ic_back"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="100sp"
        android:layout_below="@+id/back"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/title"
        android:src="@drawable/banner" />

    <Button
        android:id="@+id/play"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_margin="16sp"
        android:text="@string/play"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        tools:ignore="RelativeOverlap" />

    <TextView
        android:id="@+id/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/play"
        android:layout_centerHorizontal="true"
        android:layout_margin="16sp"
        android:text="@string/settings"
        android:textColor="@color/colorAccent"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/credit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settings"
        android:layout_centerHorizontal="true"
        android:layout_margin="16sp"
        android:text="@string/credits"
        android:textColor="@color/colorAccent"
        android:textSize="20sp" />

    <RelativeLayout
        android:id="@+id/easy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/medium"
        android:layout_marginBottom="45sp"
        android:layout_marginEnd="74sp"
        android:layout_marginStart="16sp"
        android:visibility="gone">

        <Button
            android:id="@+id/easy_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20sp"
            android:text="@string/easy"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/easy_button"
            android:layout_alignEnd="@id/easy_button"
            android:elevation="6sp"
            android:orientation="horizontal"
            android:padding="6sp"
            tools:targetApi="lollipop">

            <TextView
                android:id="@+id/easy_score1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/easy_score2"
                android:layout_width="15sp"
                android:layout_height="15sp"
                android:contentDescription="@string/easy_score2"
                android:src="@drawable/ic_score" />

            <TextView
                android:id="@+id/easy_score3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp" />

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_margin="45sp"
        android:visibility="gone">

        <Button
            android:id="@+id/medium_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20sp"
            android:text="@string/medium"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/medium_button"
            android:layout_alignEnd="@id/medium_button"
            android:elevation="6sp"
            android:orientation="horizontal"
            android:padding="6sp"
            tools:targetApi="lollipop">

            <ImageView
                android:id="@+id/medium_score0"
                android:layout_width="15sp"
                android:layout_height="15sp"
                android:contentDescription="@string/medium_score2"
                android:src="@drawable/ic_lock"
                android:visibility="gone" />

            <TextView
                android:id="@+id/medium_score1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/medium_score2"
                android:layout_width="15sp"
                android:layout_height="15sp"
                android:contentDescription="@string/medium_score2"
                android:src="@drawable/ic_score" />

            <TextView
                android:id="@+id/medium_score3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp" />

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/hard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/medium"
        android:layout_marginEnd="16sp"
        android:layout_marginStart="74sp"
        android:layout_marginTop="45sp"
        android:visibility="gone">

        <Button
            android:id="@+id/hard_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20sp"
            android:text="@string/hard"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/hard_button"
            android:layout_alignEnd="@id/hard_button"
            android:elevation="6sp"
            android:orientation="horizontal"
            android:padding="6sp"
            tools:targetApi="lollipop">

            <ImageView
                android:id="@+id/hard_score0"
                android:layout_width="15sp"
                android:layout_height="15sp"
                android:contentDescription="@string/hard_score2"
                android:src="@drawable/ic_lock"
                android:visibility="gone" />

            <TextView
                android:id="@+id/hard_score1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/hard_score2"
                android:layout_width="15sp"
                android:layout_height="15sp"
                android:contentDescription="@string/hard_score2"
                android:src="@drawable/ic_score" />

            <TextView
                android:id="@+id/hard_score3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp" />

        </LinearLayout>

    </RelativeLayout>

    <CheckBox
        android:id="@+id/sound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/sound"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/credit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_margin="16sp"
        android:autoLink="web"
        android:paddingTop="30sp"
        android:text="@string/credit"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:visibility="gone" />

</RelativeLayout>
