<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/item"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:focusable="false"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp" />

    <ImageView
        android:visibility="gone"
        android:id="@+id/score1"
        android:layout_width="20sp"
        android:layout_height="20sp"
        android:layout_alignBottom="@id/item"
        android:layout_alignEnd="@id/item"
        android:elevation="6sp"
        android:layout_margin="10sp"
        android:src="@drawable/ic_score"
        android:contentDescription="@string/score1"
        tools:targetApi="lollipop" />

    <ImageView
        android:visibility="gone"
        android:id="@+id/score2"
        android:layout_width="20sp"
        android:layout_height="20sp"
        android:elevation="6sp"
        android:layout_margin="10sp"
        android:src="@drawable/ic_score"
        android:layout_centerHorizontal="true"
        android:layout_alignBottom="@id/item"
        android:contentDescription="@string/score2"
        tools:targetApi="lollipop" />

    <ImageView
        android:visibility="gone"
        android:id="@+id/score3"
        android:layout_width="20sp"
        android:layout_height="20sp"
        android:elevation="6sp"
        android:layout_margin="10sp"
        android:src="@drawable/ic_score"
        android:layout_alignBottom="@id/item"
        android:layout_alignStart="@id/item"
        android:contentDescription="@string/score3"
        tools:targetApi="lollipop" />

</RelativeLayout>