<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="tipe.elecquizz.Selection">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:scaleType="center"
        android:src="@drawable/background"
        android:contentDescription="@string/background" />

    <ImageView
        android:id="@+id/back"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_margin="16sp"
        android:src="@drawable/ic_back"
        android:contentDescription="@string/back" />

    <TextView
        android:id="@+id/level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/back"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="16sp"
        android:layout_marginRight="16sp"
        android:layout_marginTop="16sp"
        android:gravity="center"
        android:textColor="#FAFAFA"
        android:textSize="30sp" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16sp"
        android:layout_below="@id/level"
        android:layout_above="@+id/linearLayout"
        android:contentDescription="@string/image" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_above="@+id/linear"
        android:id="@+id/linearLayout">

        <Button
            android:textAllCaps="false"
            style="@style/Widget.AppCompat.Button.Colored"
            android:textColor="@color/colorPrimary"
            android:id="@+id/answer1"
            android:layout_width="wrap_content"
            android:layout_height="100sp"
            android:layout_weight="1" />

        <Button
            android:textAllCaps="false"
            style="@style/Widget.AppCompat.Button.Colored"
            android:textColor="@color/colorPrimary"
            android:id="@+id/answer2"
            android:layout_width="wrap_content"
            android:layout_height="100sp"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">

        <Button
            android:textAllCaps="false"
            style="@style/Widget.AppCompat.Button.Colored"
            android:textColor="@color/colorPrimary"
            android:id="@+id/answer3"
            android:layout_width="wrap_content"
            android:layout_height="100sp"
            android:layout_weight="1" />

        <Button
            android:textAllCaps="false"
            style="@style/Widget.AppCompat.Button.Colored"
            android:textColor="@color/colorPrimary"
            android:id="@+id/answer4"
            android:layout_width="wrap_content"
            android:layout_height="100sp"
            android:layout_weight="1" />

    </LinearLayout>

</RelativeLayout>